tests/snapshots/integration__spec_test__spec_cmd_positional_with_choices_and_default_exec.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_positional_with_choices_and_default

OUTPUT
argc_arg=a
cmd_positional_with_choices_and_default a

