tests/snapshots/integration__spec_test__spec_cmd_positional_with_choices_and_required.snap
---
source: tests/spec_test.rs
assertion_line: 155
expression: output

---
RUN
spec cmd-positional-with-choices-and-required -h

STDOUT


STDERR
spec-cmd-positional-with-choices-and-required 
Positional with choices and required

USAGE:
    spec cmd-positional-with-choices-and-required <ARG>

ARGS:
    <ARG>    A arg with choices and required [possible values: a, b]

OPTIONS:
    -h, --help    Print help information


