tests/snapshots/integration__spec_test__spec_cmd_positional_with_choices_and_required_exec_fail.snap
---
source: tests/spec_test.rs
assertion_line: 153
expression: output
---
RUN
spec cmd_positional_with_choices_and_required

STDOUT


STDERR
error: The following required arguments were not provided:
  <ARG>

Usage: spec cmd_positional_with_choices_and_required <ARG>

For more information try '--help'


