tests/snapshots/integration__spec_test__spec_cmd_positional_with_choices_exec_fail.snap
---
source: tests/spec_test.rs
assertion_line: 146
expression: output
---
RUN
spec cmd_positional_with_choices x

STDOUT


STDERR
error: "x" isn't a valid value for '<ARG>'
	[possible values: a, b]

USAGE:
    spec cmd_positional_with_choices <ARG>

For more information try --help


