tests/snapshots/integration__spec_test__spec_cmd_positional_with_choices_fn.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_positional_with_choices_fn xyz

OUTPUT
cat >&2 <<-'EOF' 
error: invalid value 'xyz' for '[ARG]'
  [possible values: a1, a2, a3]

For more information, try '--help'.

EOF
exit 1

