tests/snapshots/integration__spec_test__spec_cmd_positional_with_choices_fn2.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_positional_with_choices_fn2 xyz

OUTPUT
argc_arg=xyz
cmd_positional_with_choices_fn2 xyz

