tests/snapshots/integration__spec_test__spec_cmd_positional_with_default.snap
---
source: tests/spec_test.rs
assertion_line: 114
expression: output
---
RUN
spec cmd-positional-with-default -h

STDOUT


STDERR
spec-cmd-positional-with-default 
Positional with default value

USAGE:
    spec cmd-positional-with-default [ARG]

ARGS:
    <ARG>    A arg with default value [default: a]

OPTIONS:
    -h, --help    Print help information


