tests/snapshots/integration__spec_test__spec_cmd_positional_with_default_exec.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_positional_with_default

OUTPUT
argc_arg=a
argc__args=( a )
argc__fn=cmd_positional_with_default
cmd_positional_with_default a

