tests/snapshots/integration__spec_test__spec_cmd_prefered_eval.snap
---
source: tests/spec_test.rs
assertion_line: 15
expression: output

---
RUN
spec cmd-prefered -f -o A AB C D

STDOUT
selfc_arg_1=( "AB" "C D" )
selfc_flag_1=1
selfc_opt_1="A"


STDERR


