tests/snapshots/integration__spec_test__spec_cmd_prefered_exec.snap
---
source: tests/spec_test.rs
assertion_line: 60
expression: output

---
RUN
spec cmd-prefered -f -o A AB C D

STDOUT
argc_arg_1=( 'AB' 'C D' )
argc_flag_1=1
argc_opt_1='A'
argc__call=cmd_prefered

STDERR


